css/style.css
@import url("universal.css");

ul { 
    list-style: none;
    padding: 0px;
    margin: 0px;
}

body {
    background-color: var(--dark-cyan-background);
    margin: 0px;
    color: var(--almost-white);
}

a {
    color: var(--almost-white);
}

h1 {
    margin-top: 0.67em;
    margin-bottom: 0.17em;
    font-size:40px;
}

h2, h3 {
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
}

hr {
    margin-top: 2vh;
    margin-bottom: 1vh;
    width: 100%;
}

.flex-horizontal {
    display: flex;
    flex-direction: row;
}

.flex-vertical {
    display: flex;
    flex-direction: column;
}

.flex {
    display: flex;
}

.secondary-axis-center {
    align-items: center;
}

.primary-axis-center {
    justify-content: center;
}

.far-spaced {
    justify-content: space-between;
    min-width: 100%;
}

.anchor {
    scroll-margin-top: 7vh;
}

.sticky {
    position: sticky;
}

.center {
    z-index: 0;
    max-height: 70vh;
    top: 7vh;
}

.top {
    z-index: 1;
    top: 0;
    padding-left: 60px;
    padding-right: 8px;
    background-color: var(--cyan-background);
}

.left {
    top: 7vh;
    width: 50%;
    max-height: 70vh;
    background-color: var(--dark-cyan-background);
    padding-top: 80px;
    margin-left: 60px;
}

.right {
    top: 7vh;
    width: 50%;
    max-height: 80vh;
    background-color: var(--dark-cyan-background);
    padding-top: 80px;
}

.side-nav-element {
    font-size: 16px;
}

.tagline {
    margin-top: 0px;
    margin-bottom: 0.33em;
    font-size: 24px;
}
.blurb {
    margin-top: 0px;
    font-size: 20px;
    max-width: 400px;
}

.footer {
    max-height: 7vh;
    margin-top: 4vh;
    margin-bottom: 1vh;
}

#center {
    gap: 128px;
}

#ribbon-right, #ribbon-left {
    gap: 8px;
    margin: 8px;
    align-self: center;
}

#navigation {
    margin-top: 30px;
}
#navigation > ul {
    gap: 24px;
    font-size: 16px;
}

